--- a/Prevu.Synoptics.V6120_Novatex/Pages/P268.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P268.xaml
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="190" Canvas.Top="71"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" PipeHeight="Medium" Canvas.Left="190" Canvas.Top="71"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="97" RenderTransformOrigin="0.5,0.5" StatusComponent="278-01-MA1" Color="Air" Canvas.Left="147" Canvas.Top="690" />
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="101" RenderTransformOrigin="0.5,0.5" StatusComponent="268-31-CV1" Color="Air" Canvas.Left="153" Canvas.Top="200"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="315" RenderTransformOrigin="0.5,0.5" StatusComponent="269-01-MA1" Color="Air" Canvas.Left="269" Canvas.Top="293"/>
@@ -60,7 +60,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="115" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="199" Canvas.Top="124">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="115" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" PipeHeight="Medium" Canvas.Left="199" Canvas.Top="124">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -83,7 +83,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="90" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" PipeHeight="Medium" Canvas.Left="955" Canvas.Top="71" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="90" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="955" Canvas.Top="71" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="101" RenderTransformOrigin="0.5,0.5" StatusComponent="267-31-CV1" Color="Air" Canvas.Left="937" Canvas.Top="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="315" RenderTransformOrigin="0.5,0.5" StatusComponent="271-01-MA1" Color="Air" Canvas.Left="1053" Canvas.Top="292" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="224" RenderTransformOrigin="0.5,0.5" StatusComponent="277-01-MA1" PipeHeight="Medium" Canvas.Left="1064" Canvas.Top="688" HorizontalAlignment="Center" VerticalAlignment="Top" />
@@ -123,7 +123,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="116" RenderTransformOrigin="0.5,0.5" StatusComponent="244-01-MA1" PipeHeight="Medium" Canvas.Left="982" Canvas.Top="124" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="116" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="982" Canvas.Top="124" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -183,11 +183,11 @@
         </Misc:DashedLine>
         <TextBlock Width="94" Canvas.Top="40" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="662" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="S4"/><Run Language="it-it" Text="0"/><Run Text="1"/></TextBlock>
         <TextBlock Width="94" Canvas.Top="40" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="773" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="S4"/><Run Language="it-it" Text="02"/></TextBlock>
-        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="268-01-MA1" JumpToLabel="234-01-MA1" Canvas.Left="145" Canvas.Top="41"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="267-01-MA1" JumpToLabel="234-01-MA1" Canvas.Left="910" Canvas.Top="41"/>
         <Labels:JumpLabel JumpFromLabel="299-31-CV1" JumpToLabel="300-41-LT1" Canvas.Left="628" Canvas.Top="657" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="299-31-CV1" JumpToLabel="310-41-LT1" Canvas.Left="548" Canvas.Top="760" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="309-31-CV1" JumpToLabel="310-41-LT1" Canvas.Left="1412" Canvas.Top="657" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="267-01-MA1" JumpToLabel="244-01-MA1" Canvas.Left="929" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="268-01-MA1" JumpToLabel="244-01-MA1" Canvas.Left="130" Canvas.Top="40" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="309-31-CV1" JumpToLabel="300-41-LT1" Canvas.Left="1332" Canvas.Top="760" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="299-31-CV1" Canvas.Left="440" Canvas.Top="625" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="273-01-MA1" Canvas.Left="437" Canvas.Top="353" />
