--- a/Prevu.Synoptics.V6736_OkPlast/Pages/P430.xaml
+++ b/Prevu.Synoptics.V6736_OkPlast/Pages/P430.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P430" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
-        <Labels:Pipe Width="136" Canvas.Top="529" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1077" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="136" Canvas.Top="529" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1077" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -17,15 +17,15 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="130" Canvas.Top="405" StatusComponent="430-01-MA4" RenderTransformOrigin="0.5,0.5" Canvas.Left="689" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Icon="Right">
+        <Labels:Pipe Width="130" Canvas.Top="405" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="689" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Icon="Right">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="141" Color="Water" StatusComponent="440-01-MA1" VisibilityComponent="" Canvas.Left="604" Canvas.Top="486" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Left"/>
-        <Labels:Pipe Color="Water" Width="236" RenderTransformOrigin="0.5,0.5" StatusComponent="440-01-MA1" VisibilityComponent="" Canvas.Left="488" Canvas.Top="612" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="141" Color="Water" StatusComponent="430-01-MA3" VisibilityComponent="" Canvas.Left="604" Canvas.Top="486" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Left"/>
+        <Labels:Pipe Color="Water" Width="236" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA3" Canvas.Left="488" Canvas.Top="612" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -41,7 +41,7 @@
         </Labels:Pipe>
         <Labels:Pipe Width="120" StatusComponent="380-01-MA1" PipeHeight="Medium" Canvas.Left="86" Canvas.Top="130" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="135" VerticalAlignment="Center" Canvas.Top="131" StatusComponent="420-01-MA1" PipeHeight="Medium" Canvas.Left="264" HorizontalAlignment="Left"/>
-        <Labels:Pipe Width="211" VerticalAlignment="Top" Canvas.Top="134" StatusComponent="430-01-MA4" RenderTransformOrigin="0.5,0.5" Canvas.Left="544" HorizontalAlignment="Center" Color="ByProduct"/>
+        <Labels:Pipe Width="211" VerticalAlignment="Top" Canvas.Top="134" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="544" HorizontalAlignment="Center" Color="ByProduct"/>
         <Labels:Pipe Width="664" VisibilityComponent="" VerticalAlignment="Center" Canvas.Top="336" StatusComponent="433-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="464" HorizontalAlignment="Left" PipeHeight="Medium"/>
         <Labels:Pipe Width="50" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="816" Canvas.Top="479" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="220" Color="Water" StatusComponent="457-01-MA1" Canvas.Left="661" Canvas.Top="777" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -69,7 +69,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="95" StatusComponent="455-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1227" Canvas.Top="532" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="196" Canvas.Top="230" StatusComponent="430-01-MA4" RenderTransformOrigin="0.5,0.5" Canvas.Left="656" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
+        <Labels:Pipe Width="196" Canvas.Top="230" StatusComponent="430-01-MA3" RenderTransformOrigin="0.5,0.5" Canvas.Left="656" HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -84,14 +84,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="579" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="118" RenderTransformOrigin="0.5,0.5" StatusComponent="433-01-MA1" VisibilityComponent="" Canvas.Left="579" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="482" Color="Water" StatusComponent="431-01-MA1" VisibilityComponent="" Canvas.Left="636" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="482" Color="Water" StatusComponent="433-01-MA1" VisibilityComponent="" Canvas.Left="636" Canvas.Top="614" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="134" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="797" Canvas.Top="260" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
