V6736: Fix Componentes name D530

--- a/Prevu.Synoptics.V6736_OkPlast/Details/D530.xaml
+++ b/Prevu.Synoptics.V6736_OkPlast/Details/D530.xaml
@@ -18,10 +18,10 @@
         <Machines:V01_DRY_HeatingBattery Canvas.Left="308" Canvas.Top="101" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_DRY_HeatingBattery Canvas.Left="222" Canvas.Top="101" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="46" Canvas.Top="96" Height="58" Width="58" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="530-41-TT1" HorizontalAlignment="Left" VerticalAlignment="Center"  Canvas.Left="427" Canvas.Top="54"/>
-        <Labels:DeviceLabel ComponentName="530-13-R1" Height="52" VerticalAlignment="Center" Canvas.Left="116" Canvas.Top="35" HorizontalAlignment="Left"/>
-        <Labels:DeviceLabel ComponentName="530-12-R1" Canvas.Left="202" Canvas.Top="170" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="530-11-R1" Height="52" VerticalAlignment="Center" Canvas.Left="288" Canvas.Top="35" HorizontalAlignment="Left"/>
+        <Labels:DeviceLabel ComponentName="530-42-TT1" HorizontalAlignment="Left" VerticalAlignment="Center"  Canvas.Left="427" Canvas.Top="54"/>
+        <Labels:DeviceLabel ComponentName="530-13-RA1" Height="52" VerticalAlignment="Center" Canvas.Left="116" Canvas.Top="35" HorizontalAlignment="Left"/>
+        <Labels:DeviceLabel ComponentName="530-12-RA1" Canvas.Left="202" Canvas.Top="170" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="530-11-RA1" Height="52" VerticalAlignment="Center" Canvas.Left="288" Canvas.Top="35" HorizontalAlignment="Left"/>
         <Labels:DeviceLabel ComponentName="534-01-MA1" VerticalAlignment="Center" Canvas.Top="170" Canvas.Left="30" HorizontalAlignment="Center" />
     </Canvas>
 </UserControl>
